--- a/todo/templates/tasks.html
+++ b/todo/templates/tasks.html
@@ -8,14 +8,17 @@
 <body>
     <ul>
         {% for task in tasks %}
-            <li>{{ task.id }} - {{ task.name }}</li>
+            <li>
+                {{ task.id }} - {{ task.name }}
+                <a href="{% url 'end_task' task.id %}">Done</a>
+            </li>
         {% endfor %}
     </ul>
 
     <h1>New task</h1>
     <form action="{% url 'create_task' %}" method="POST">
         {% csrf_token %}
-        <input type="text" name="name">
+        <input type="text" name="name" required autofocus>
         <button type="submit">Create</button>
     </form>
     
