--- a/todo/templates/edit_task.html
+++ b/todo/templates/edit_task.html
@@ -1,19 +1,24 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'edit_task.css' %}">
     <title>Edit your task</title>
 </head>
 <body>
     
-    {{ task.id }} - {{ task.name }}
+    <div class="container-sm w-50" id="container_edit_task">
+        <h3>Task name - {{ task.name }}</h3>
+        <h1>Edit task</h1>
+        <form action="{% url 'edit_task' task.id %}" method="POST">
+            {% csrf_token %}
+            <input type="text" name="new_name" class="form-control" value="{{ task.name }}" required autofocus>
+            <button type="submit" class="btn btn-primary">Edit</button>
+        </form>
+    </div>
 
-    <h1>Edit task</h1>
-    <form action="{% url 'edit_task' task.id %}" method="POST">
-        {% csrf_token %}
-        <input type="text" name="new_name" value="{{ task.name }}" required autofocus>
-        <button type="submit">Edit</button>
-    </form>
 </body>
 </html>
