--- a/todo/templates/tasks.html
+++ b/todo/templates/tasks.html
@@ -1,26 +1,35 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'tasks.css' %}">
     <title>Todo List</title>
 </head>
 <body>
-    <ul>
-        {% for task in tasks %}
-            <li>
-                {{ task.id }} - {{ task.name }}
-                <a href="{% url 'end_task' task.id %}">Done</a>
-            </li>
-        {% endfor %}
-    </ul>
+    <div class="container-sm w-50" id="container_tasks">
+        <h1>Create new task</h1>
+        <form action="{% url 'create_task' %}" method="POST">
+            {% csrf_token %}
+            <div class="mb-3">
+                <input type="text" name="name" class="form-control" required autofocus>
+            </div>
+            <button type="submit" class="btn btn-primary">Create</button>
+        </form>
 
-    <h1>New task</h1>
-    <form action="{% url 'create_task' %}" method="POST">
-        {% csrf_token %}
-        <input type="text" name="name" required autofocus>
-        <button type="submit">Create</button>
-    </form>
-    
+        <br>
+        <h3>Tasks to do</h3>
+        <ul>
+            {% for task in tasks %}
+                <li>
+                    {{ task.id }} - {{ task.name }}
+                    <a href="{% url 'edit_task' task.id %}">Edit</a>
+                    <a href="{% url 'end_task' task.id %}">Done</a>
+                </li>
+            {% endfor %}
+        </ul>
+    </div>
 </body>
 </html>
